<resources>
    <string name="app_name">Groceries List</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_company">Company</string>
    <string name="action_cart">Cart</string>
    <string name="action_price">Price List</string>
    <string name="action_filterview">Filter View</string>
    <string name="search">SEARCH</string>
    <string name="company_adding">Kindly create the companies first.</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="total_rem">Total remaining quantity is :</string>

    <string name="arguments">Arguments</string>
    <string name="values">Values</string>

    <string name="companyName">Company Name</string>
    <string name="ownerName">Owner Name</string>
    <string name="address">Address</string>
    <string name="place">Place</string>
    <string name="pincode">Pincode</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="emailId">Email ID</string>
    <string name="gstNumber">GST Number</string>
    <string name="bankDetails">Bank Details</string>
    <string name="bankName">Bank Name</string>
    <string name="accNumber">Account Number</string>
    <string name="bankBranch">Bank Branch</string>
    <string name="ifsc">IFSC Code</string>

    <string name="packingSize">Packing Size</string>
    <string name="packingUnit">Packing Unit</string>
    <string name="uom">Unit of measurement</string>
    <string name="caseQty">Case Quantity</string>
    <string name="hsn">HSN Code</string>
    <string name="gst">GST %</string>
    <string name="pPrice">Purchase</string>
    <string name="cPrice">Cost</string>
    <string name="wPrice">Whole</string>
    <string name="rPrice">Retailer</string>
    <string name="cP">C</string>
    <string name="wP">W</string>
    <string name="rP">R</string>

    <string name="mrp">MRP</string>
    <string name="sheet">Pieces per Sheet</string>
    <string name="priceUpdate">Price Update</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>

    <string name="product_create">Create Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_desc">Product description</string>
    <string name="category">Category</string>
    <string name="product_brand">Product Brand</string>
    <string name="product_packing">Packing Details</string>
    <string name="product_mfr">Manufacture Details</string>
    <string name="mfr_name">Manufacture Name</string>
    <string name="second_measurement">Secondary measurement</string>
    <string name="sheets_no">Sheets Number</string>
    <string name="packing_size">Case packing</string>
    <string name="verify">Verification Code</string>
    <string name="stock">Stock</string>

    <string name="serverpath">Server Path</string>
    <string name="importData">Import Data</string>
    <string name="imposrtDataD">Specify the path of the file to process the data.</string>
    <string name="exportData">Export Data</string>
    <string name="exportDataD">Details of the exported the files is shown here.</string>

    <string name="name">Name</string>
    <string name="desc">Description</string>

    <string name="companyTitle">Companies Details</string>
    <string name="companyDesc">About company.</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="sa_prodName">Product Name</string>
    <string name="sa_datetime">Date and Time</string>
    <string name="sa_qty">Quantity</string>
    <string name="sa_type">Choose one of the stock type:</string>
    <string name="sa_remark">Remark</string>
    <string name="sa_customer">Customer</string>
    <string name="sa_add">Inward Stock</string>
    <string name="sa_minus">Outward Stock</string>
    <string name="sa_add_onemore">Add Product</string>
    <string name="sa_save">Save</string>
    <string name="cust_type">Customer Type</string>
    <string name="cust_name">Customer Name</string>

    <!--Dashboard details -->
    <string name="lastBillNo">Last Bill Number:</string>
    <string name="lastBillTime">Last Bill Time:</string>
    <string name="sales">Sales</string>
    <string name="purchase">Purchase</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_dashboard">DashBoard</string>
    <string name="nav_product">Product</string>
    <string name="nav_company">Company</string>
    <string name="nav_price_list">PriceList</string>
    <string name="nav_storage_location">Storage Location</string>
    <string name="nav_pick_up_person">Pick Up Person</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_stock">Stock</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_customer">Customer</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>DashBoard</item>
        <item>Products</item>
        <item>Customer</item>
        <item>Company</item>
        <item>Storage Location</item>
        <item>Stock</item>
        <item>Price List</item>
        <item>Pick Up Person</item>
        <item>Setting</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="billNo">Bill Number:</string>
    <string name="date">Date :</string>

    <string name="phone">Phone Number</string>
    <string name="state">State</string>
    <string name="scode">State Code</string>
    <string name="email">E-mail</string>
    <string name="gst_num">GST Number</string>
    <string name="edit">EDIT</string>

    <string-array name="group">
        <item>Rice</item>
        <item>Dall</item>
        <item>Flour</item>
        <item>Oil</item>
        <item>Ghee</item>
        <item>Masala</item>
        <item>Sugar</item>
        <item>Salt</item>
    </string-array>

    <string-array name="gstValues">
        <item>GST 0%</item>
        <item>GST 5%</item>
        <item>GST 12%</item>
        <item>GST 18%</item>
        <item>GST 28%</item>
    </string-array>

    <string-array name="uom">
        <item>Gms</item>
        <item>Kgs</item>
        <item>Lts</item>
        <item>Ml</item>
        <item>Mt</item>
        <item>Nos</item>
    </string-array>

    <string-array name="cust_type_value">
        <item>Credit</item>
        <item>Cash</item>
    </string-array>

    <string-array name="status">
        <item>ACTIVE</item>
        <item>DEACTIVE</item>
    </string-array>

    <string name="demo">Product discription in detail hello_second_fragmenthello_second_fragmenthello_second_fragmenthello_second_fragmenthello_second_fragmenthello_second_fragmenthello_second_fragmenthello_second_fragmenthello_second_fragmenthello_second_fragment</string>
</resources>