<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_weight="0.5"
        android:id="@+id/pd_name"
        android:text="@string/app_name"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.5">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pd_cPrice"
            android:layout_weight="0.25"
            android:text="@string/cPrice"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:id="@+id/pd_wPrice"
            android:text="@string/wPrice"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pd_rPrice"
            android:layout_weight="0.25"
            android:text="@string/rPrice"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pd_mPrice"
            android:layout_weight="0.25"
            android:text="@string/mrp"/>
    </LinearLayout>
</LinearLayout>
