<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/fab_margin"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/priceUpdate"
        android:textSize="25sp"
        android:paddingLeft="@dimen/fab_margin"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:orientation="horizontal">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pPrice"
            android:inputType="number"
            android:id="@+id/ru_pRate"
            android:layout_weight="0.5"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/ru_cRate"
            android:hint="@string/cPrice"
            android:layout_weight="0.5"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_margin"
        android:orientation="horizontal">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wPrice"
            android:inputType="number"
            android:id="@+id/ru_wRate"
            android:layout_weight="0.5"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rPrice"
            android:inputType="number"
            android:id="@+id/ru_rRate"
            android:layout_weight="0.5"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/ru_cancel"
            android:background="@android:color/transparent"
            android:layout_weight="0.5"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/ru_save"
            android:textSize="@dimen/fab_margin"
            android:textStyle="bold"
            android:background="@android:color/transparent"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_weight="0.5"/>
    </LinearLayout>
</LinearLayout>
