<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="@dimen/fab_margin"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <SearchView
            android:layout_width="wrap_content"
            android:layout_weight="0.8"
            android:id="@+id/search"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=" 0.2"
            android:id="@+id/filter"
            android:text="FILLTER"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="5dp"
        android:background="@android:color/darker_gray"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20dp"
            android:id="@+id/pd_name"
            android:text="@string/app_name"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="20dp"
                android:id="@+id/pd_cPrice"
                android:text="@string/cP"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:gravity="center"
                android:id="@+id/pd_wPrice"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="@string/wP"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="20dp"
                android:id="@+id/pd_rPrice"
                android:text="@string/rP"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="20dp"
                android:id="@+id/pd_mrp"
                android:text="@string/mrp"/>
        </LinearLayout>
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:id="@+id/listview"
        android:layout_height="wrap_content"/>
</LinearLayout>
