<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:id="@+id/lcs_cust_name_lay"
            android:hint="@string/cust_name">
            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:layout_width="match_parent"
                android:inputType="textCapSentences"
                android:id="@+id/lcs_cust_name"
                android:drawableRight="@drawable/outline_more_horiz_24"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:id="@+id/lcs_date_lay"
            android:layout_below="@+id/lcs_cust_name_lay"
            android:hint="@string/sa_datetime">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textCapSentences"
                android:id="@+id/lcs_date"
                android:drawableRight="@android:drawable/ic_menu_my_calendar"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:id="@+id/lcs_remark_lay"
            android:layout_below="@+id/lcs_date_lay"
            android:hint="@string/sa_remark">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textCapSentences"
                android:id="@+id/lcs_remark"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lcs_types"
            android:layout_below="@+id/lcs_remark_lay"
            android:text="@string/cust_type"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lcs_types"
            android:id="@+id/lcs_radio_group"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:id="@+id/lcs_type_sales"
                android:text="@string/sa_add"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:id="@+id/lcs_type_purchase"
                android:text="@string/sa_minus"/>
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lcs_radio_group"
            android:id="@+id/lcs_btn"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:id="@+id/lcs_save"
                android:layout_weight="0.5"
                app:cardCornerRadius="15dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:gravity="center"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/sa_save"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.5"
                android:id="@+id/lcs_items"
                app:cardCornerRadius="15dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/sa_add_onemore"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_below="@id/lcs_btn"
            app:cardCornerRadius="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:id="@+id/lcs_add_items"
                android:orientation="vertical">
                <include
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    layout="@layout/layout_item"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </RelativeLayout>
</ScrollView>
